# airflow-dag-unittests

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
airflow_dag_unittests/: dag.py  utils.py
tests/: test_dag.py  test_utils.py
